--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "next build",
+    "deploy": "npm run build && npm run export",
     "dev": "next",
     "export": "next export",
     "start": "next start"
